# OpenKB

./: .env.example  README.md  config.yaml.example  pyproject.toml
openkb/: __main__.py  cli.py  config.py  converter.py  graph.py  history.py  images.py  large_doc.py  mcp_server.py  schema.py  storage_db.py  sync.py  sync_git.py
openkb/agent/: _markdown.py  chat.py  compiler.py  linter.py  query.py  tools.py
openkb/api/: __init__.py
openkb/plugins/: __init__.py
openkb/skills/: __init__.py
openkb/web/: __init__.py
tests/: test_add_command.py  test_chat_slash_commands.py  test_compiler.py  test_config.py  test_converter.py  test_query.py
